--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "CI=true react-scripts test --env=jsdom-fourteen",
-    "test:watch": "react-scripts test --watchAll=true --env=jsdom-fourteen",
+    "test:watch": "react-scripts test --watchAll=true --coverage --env=jsdom-fourteen",
     "eject": "react-scripts eject"
   },
   "husky": {
